[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Modules/Main.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Modules/FPS Test File/Junk.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
junk_scene = ExtResource( 4 )

[node name="Pivot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FPSLabel" type="Label" parent="Pivot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -318.0
margin_top = 41.0
margin_right = -278.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="TimeLabel" type="Label" parent="Pivot"]
margin_left = 53.0
margin_top = 50.0
margin_right = 93.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="RecordedTime" type="Label" parent="Pivot"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -185.0
margin_right = -112.0
margin_bottom = -107.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="DeltaSwitch" type="CheckButton" parent="Pivot"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -476.0
margin_top = -120.0
margin_right = -72.0
margin_bottom = -34.0
custom_fonts/font = SubResource( 1 )
text = "Use Delta"

[node name="IndicatorSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="IndicatorSprite"]

[node name="SpawnJunk" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="screen_exited" from="IndicatorSprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="SpawnJunk" to="." method="_on_SpawnJunk_timeout"]
